--- a/pi-file-server.service
+++ b/pi-file-server.service
@@ -8,10 +8,18 @@ User=admin
 Group=admin
 WorkingDirectory=/home/admin/PiWebFileServer
 Environment="PATH=/home/admin/PiWebFileServer/venv/bin"
-Environment="PI_FILE_SERVER_BASE_DIR=/home/admin/shared"
+Environment="PI_FILE_SERVER_BASE_DIR=/home/admin/Documents"
+Environment="FLASK_ENV=development"
+Environment="FLASK_DEBUG=1"
 ExecStart=/home/admin/PiWebFileServer/venv/bin/python app.py
 Restart=always
 RestartSec=3
+
+# Ensure the service has access to the directories
+PermissionsStartOnly=true
+ExecStartPre=/bin/mkdir -p /home/admin/Documents
+ExecStartPre=/bin/chown admin:admin /home/admin/Documents
+ExecStartPre=/bin/chmod 755 /home/admin/Documents
 
 [Install]
 WantedBy=multi-user.target
