--- a/pi-file-server.service
+++ b/pi-file-server.service
@@ -7,26 +7,26 @@ Type=simple
 User=admin
 Group=admin
 WorkingDirectory=/home/admin/PiWebFileServer
-Environment="PATH=/home/admin/PiWebFileServer/venv/bin"
+Environment="PATH=/home/admin/PiWebFileServer/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 Environment="PI_FILE_SERVER_BASE_DIR=/home/admin"
-Environment="FLASK_ENV=development"
-Environment="FLASK_DEBUG=1"
+Environment="FLASK_ENV=production"
+Environment="FLASK_APP=app.py"
 
 # Allow binding to port 443
 AmbientCapabilities=CAP_NET_BIND_SERVICE
 
 # Ensure directories exist
 PermissionsStartOnly=true
-ExecStartPre=/bin/mkdir -p /home/admin/Documents
+ExecStartPre=/bin/mkdir -p /home/admin
 ExecStartPre=/bin/mkdir -p /home/admin/PiWebFileServer/ssl
-ExecStartPre=/bin/chown -R admin:admin /home/admin/Documents
+ExecStartPre=/bin/chown -R admin:admin /home/admin
 ExecStartPre=/bin/chown -R admin:admin /home/admin/PiWebFileServer/ssl
-ExecStartPre=/bin/chmod 755 /home/admin/Documents
+ExecStartPre=/bin/chmod 755 /home/admin
 ExecStartPre=/bin/chmod 700 /home/admin/PiWebFileServer/ssl
 
-ExecStart=/home/admin/PiWebFileServer/venv/bin/python app.py
+ExecStart=/home/admin/PiWebFileServer/venv/bin/python3 /home/admin/PiWebFileServer/app.py
 Restart=always
-RestartSec=3
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
